<resources>
    <string name="app_name">The Timeline</string>

    <!-- AuthenticationActivity -->
    <string name="auth_activity_email">Email Address</string>
    <string name="auth_activity_password">Password</string>

    <!-- fragment_sign_in -->
    <string name="fragment_sign_in_with_email">SIGN IN</string>
    <string name="fragment_sign_in_navigate_to_register">Don\'t have an account? Create one now!</string>

    <!-- fragment_register -->
    <string name="fragment_register_confirm_password">Confirm password</string>
    <string name="fragment_register_create_user">CREATE USER</string>
    <string name="fragment_register_navigate_to_sign_in">Already have an account?</string>

    <!-- fragment_new_user -->
    <string name="fragment_new_user_headline">Welcome,\nto your Timeline</string>
    <string name="fragment_new_user_sub_headline">Tell us about yourself</string>
    <string name="fragment_new_user_sub_headline_description">All the information gathered here will not be visible to other users,
            and will only be used to gather statistics.</string>
    <string name="fragment_new_user_date_picker_hint">Date of birth</string>
    <string name="fragment_new_user_date_picker_title">Select date</string>
    <string name="fragment_new_user_country_hint">Country</string>
    <string name="fragment_new_user_gender_hint">Gender</string>
    <string name="fragment_new_user_sexuality_hint">Sexual orientation</string>
    <string name="fragment_new_user_faith_hint">Faith</string>
    <string name="fragment_new_user_continue">CONTINUE</string>
    <string name="fragment_new_user_switch_account">SWITCH ACCOUNT</string>
    <string-array name="fragment_new_user_gender">
        <item>Male</item>
        <item>Female</item>
        <item>Nonbinary</item>
    </string-array>
    <string-array name="fragment_new_user_orientation">
        <item>Heterosexual</item>
        <item>Homosexual</item>
        <item>Bisexual</item>
        <item>Asexual</item>
    </string-array>
    <string-array name="fragment_new_user_faith">
        <item>Agnostic</item>
        <item>Religious</item>
        <item>Atheist</item>
    </string-array>

    <!-- fragment_splash -->
    <string name="fragment_splash_loading_message">Loading user data...</string>

</resources>